--- a/app/StudentPortal/app/views/ringkasan.scala.html
+++ b/app/StudentPortal/app/views/ringkasan.scala.html
@@ -57,52 +57,62 @@
 				<div class="row">
 					<h2 class="text-center">RINGKASAN DATA AKADEMIK</h2> 
 				</div>
+				<p></br></p>
 				@if(ringkasan==null){
 					<div class="row">
 						<h5 style="color: gray;">DATA AKADEMIK BELUM TERSEDIA <span class="glyphicon glyphicon-exclamation-sign"></span></h5>
 					</div>	
 				}else{
 				<div class="row">
-                    <div class="col-lg-12">
-						IPS @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
-						IPK: @ringkasan.getIPK()<br>
-						SKS lulus: @ringkasan.getSKSLulusTotal()<br>
-						Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
-						
-						<div class="panel panel-default">
-							<div class="panel-body">
-								<div class="page-header">
-									<h5>Pilihan Wajib</h5>
-								</div>
-								Lulus: <br>
-								<ul>
-									@if(ringkasan.getPilWajibLulus().length==0){
-										<li>	-	</li>
-									}else{
-										@for(list<-ringkasan.getPilWajibLulus()){
-											<li>@list @ringkasan.getNamaPilWajib(list)</li>
-										}
-									}
-								</ul>
-								Belum lulus: <br>
-								<ul>
-									@if(ringkasan.getPilWajibBelumLulus().length==0){
-										<li>	-	</li>
-									}else{
-										@for(list<-ringkasan.getPilWajibBelumLulus()){
-											<li>@list @ringkasan.getNamaPilWajib(list)</li>
-										}
-									}
-								</ul>
-								@if(ringkasan.getPilWajib().length-ringkasan.getPilWajibBelumLulus().length>=4){
-									Sudah memenuhi syarat kelulusan pilihan wajib
-								}else{
-									Belum memenuhi syarat kelulusan pilihan wajib, minimal lulus
-									@(4-ringkasan.getPilWajibLulus().length) mata kuliah pilihan wajib.
-								}
-							</div>
+					<div class="col-lg-3 ringkasan-panel"></div>
+                    <div class="col-lg-6 ringkasan-panel">
+						<div class="page-header">
+							<h5 class="text-center">INDEKS PRESTASI</h5>
 						</div>
-
+						<div class="ringkasan-body">
+							IPS @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
+							IPK: @ringkasan.getIPK()<br>
+							SKS lulus: @ringkasan.getSKSLulusTotal()<br>
+							Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
+						</div>
+					</div>
+                </div>
+				<p></br></p>
+				<div class="row">
+					<div class="col-lg-3 ringkasan-panel"></div>
+                    <div class="col-lg-6 ringkasan-panel">
+						<div class="page-header">
+							<h5 class="text-center">PILIHAN WAJIB</h5>
+						</div>
+						<div class="ringkasan-body">
+							Lulus: <br>
+							<ul>
+								@if(ringkasan.getPilWajibLulus().length==0){
+									<li>	-	</li>
+								}else{
+									@for(list<-ringkasan.getPilWajibLulus()){
+										<li>@list @ringkasan.getNamaPilWajib(list)</li>
+									}
+								}
+							</ul>
+							Belum lulus: <br>
+							<ul>
+								@if(ringkasan.getPilWajibBelumLulus().length==0){
+									<li>	-	</li>
+								}else{
+									@for(list<-ringkasan.getPilWajibBelumLulus()){
+										<li>@list @ringkasan.getNamaPilWajib(list)</li>
+									}
+								}
+							</ul>
+							<h5>LULUS @ringkasan.getPilWajibLulus().length DARI @ringkasan.getPilWajib().length MATA KULIAH PILIHAN WAJIB</h5>
+							@if(ringkasan.getPilWajib().length-ringkasan.getPilWajibBelumLulus().length>=ringkasan.getMinLulusPilWajib()){
+								<P style="color: #0066FF;">SUDAH MEMENUHI SYARAT KELULUSAN MATA KULIAH PILIHAN WAJIB <span class="glyphicon glyphicon-flag"></span></P>
+							}else{
+								<p style="color: red;">BELUM MEMENUHI SYARAT KELULUSAN MATA KULIAH PILIHAN WAJIB <span class="glyphicon glyphicon-remove"></span></p>
+								<p style="color: #FF9900;">MINIMAL LULUS @(ringkasan.getMinLulusPilWajib()-ringkasan.getPilWajibLulus().length) MATA KULIAH PILIHAN WAJIB LAGI <span class="glyphicon glyphicon-warning-sign"></span></p>
+							}
+							</div>
 					</div>
                 </div>
                 }
