Minor edit interface

--- a/app/StudentPortal/app/views/login.scala.html
+++ b/app/StudentPortal/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@(message: String)
+ @(message: String)
 
 <!doctype html>
 <html>
@@ -17,8 +17,8 @@
 	<body id="login-body">
 	    <div class="container" id="login-container">
 			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-2"></div>
+				<div class="col-md-4 col-sm-8">
 					<div class="panel panel-default">
 						<div class="panel-body">
 							<div class="page-header">
@@ -48,13 +48,13 @@
 										<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span>
 									</div>
 								</div>
-								  @Html(message)
+								 @Html(message)
 								<button name="submit" type="submit" class="form-control">Login <span class="glyphicon glyphicon-log-in"></span></button>
 							</form>
 						</div>	
 					</div>										
 				</div>
-				<div class="col-md-4"></div>
+				<div class="col-md-4 col-sm-2"></div>
 			</div>
 		</div>
 		<!-- Javascript -->
