--- a/app/StudentPortal/app/views/jadwalKuliah.scala.html
+++ b/app/StudentPortal/app/views/jadwalKuliah.scala.html
@@ -113,14 +113,17 @@
 				}
 				
 				<div class="modal fade" id="modalDialog" role="dialog">
-					<div class="modal-dialog modal-sm">
+					<div class="modal-dialog modal-lg">
 					  <div class="modal-content">
 						<div class="modal-header">
 						  <button type="button" class="close" data-dismiss="modal">&times;</button>
-						  <h4 class="modal-title">Modal Header</h4>
+						  <h2 class="modal-title text-center">Modal Header</h2>
 						</div>
-						<div class="modal-body">
-						  <p>Modal Content.</p>
+						<div class="modal-body"> 
+						  <h4 class="text-center" id="kelas"></h4>
+						  <h4 class="text-center" id="dosen"></h4>
+						  <h4 class="text-center" id="waktu"></h4>
+						  <h4 class="text-center" id="ruang"></h4>
 						</div>
 						<div class="modal-footer">
 						  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -139,7 +142,11 @@
 		<script>
 			function setModal(kodeMk, namaMk, kelas, dosen, waktu, ruang) {
 				$(".modal-title").html(kodeMk + " " + namaMk);
-				$(".modal-body").html("<table> <tr> <td>"+waktu+"</td></tr><tr><td>Kelas "+kelas+"</td></tr><tr><td>"+dosen+"</td></tr><tr><td>"+ruang+"</td></tr></table>");
+				$("#waktu").html("Pukul " + waktu);
+				$("#kelas").html("Kelas " + kelas);
+				$("#dosen").html(dosen);
+				$("#ruang").html("Ruang " + ruang);
+				//$(".modal-body").html("<table> <tr> <td>"+waktu+"</td></tr><tr><td>Kelas "+kelas+"</td></tr><tr><td>"+dosen+"</td></tr><tr><td>"+ruang+"</td></tr></table>");
 			}
 		</script>
     </body>
