--- a/app/StudentPortal/public/stylesheets/main.css
+++ b/app/StudentPortal/public/stylesheets/main.css
@@ -18,7 +18,7 @@ body,html{
 	background-color: #222;
 }
 .panel-body label{
-	color: #222;;
+	color: white;
 }
 .page-header .logo-set{
 	margin: 0 auto 10px;
