Switch SIAModels branch to master, fix prasyarat URL

--- a/app/StudentPortal/app/views/prasyarat.scala.html
+++ b/app/StudentPortal/app/views/prasyarat.scala.html
@@ -81,7 +81,7 @@
 								@if(ls.getStatus()(0).contains("data prasyarat tidak tersedia")){
 									<td class="text-center" rowspan="@(ls.getStatus().length)">@ls.getMataKuliah().kode()</td>
 								}else{
-									<td class="text-center" rowspan="@(ls.getStatus().length)"><a target="_blank" href= @{val ref = "https://github.com/herfanheryandi/Skripsi/blob/master/app/StudentPortal/app/id.ac.unpar.siamodels/matakuliah/"+ls.getMataKuliah().kode()+".java"; ref}>@ls.getMataKuliah().kode()</a></td>
+									<td class="text-center" rowspan="@(ls.getStatus().length)"><a target="_blank" href= @{val ref = "https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/matakuliah/"+ls.getMataKuliah().kode()+".java"; ref}>@ls.getMataKuliah().kode()</a></td>
 								}
 
 								<td rowspan="@(ls.getStatus().length)">@ls.getMataKuliah().nama()</td>
