Perbaikan link untuk kode sumber dan bug report.

--- a/app/StudentPortal/app/views/prasyarat.scala.html
+++ b/app/StudentPortal/app/views/prasyarat.scala.html
@@ -48,6 +48,12 @@
 						<li ><a href="@routes.Application.logout()">
 							Logout<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span>
 						</a></li>
+						<li><a href="https://github.com/ftisunpar/IFStudentPortal" target="_blank">
+							&gt; Kode Program
+						</a></li>
+						<li><a href="https://github.com/ftisunpar/IFStudentPortal/issues" target="_blank">
+							&gt; Laporkan <em>bug</em>!
+						</a></li>
 					</ul>
 				</div>
 			</div>
