--- a/app/StudentPortal/app/views/home.scala.html
+++ b/app/StudentPortal/app/views/home.scala.html
@@ -48,6 +48,12 @@
 						<li ><a href="@routes.Application.logout()">
 							Logout<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span>
 						</a></li>
+						<li><a href="https://github.com/ftisunpar/IFStudentPortal" target="_blank">
+							&gt; Kode Program
+						</a></li>
+						<li><a href="https://github.com/ftisunpar/IFStudentPortal/issues" target="_blank">
+							&gt; Laporkan <em>bug</em>!
+						</a></li>
 					</ul>
 				</div>
 			</div>
@@ -78,11 +84,6 @@
 					</div>
 				</div>
 				<p><br></p>
-				<div class="row">
-					<div class="col-lg-6">
-						<a href="https://github.com/herfanheryandi/Skripsi/tree/master/app/StudentPortal" target="_blank">Source code Informatika Student Portal</a>
-					</div>
-				</div>
 			</div>
 		</div>
 
