--- a/app/StudentPortal/app/views/templates/sidebar.scala.html
+++ b/app/StudentPortal/app/views/templates/sidebar.scala.html
@@ -26,14 +26,11 @@
 				<li><a href="@routes.Application.ringkasan()">
 					Data Akademik<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
 				</a></li>
+				<li><a href="@routes.Application.tentang()">
+					Lapor Bug, dll<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-info-sign"></span>
+				</a></li>
 				<li ><a href="@routes.Application.logout()">
 					Logout<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span>
-				</a></li>
-				<li><a href="https://github.com/ftisunpar/IFStudentPortal" target="_blank">
-					&gt; Kode Program
-				</a></li>
-				<li><a href="https://github.com/ftisunpar/IFStudentPortal/issues" target="_blank">
-					&gt; Laporkan <em>bug</em>!
 				</a></li>
 			</ul>
 		</div>
