Lisensi, Tentang & Lapor Bug, SIAModel project

--- a/app/StudentPortal/app/views/tentang.scala.html
+++ b/app/StudentPortal/app/views/tentang.scala.html
@@ -17,6 +17,14 @@
 					<p>&copy; 2015 versi orisinal oleh Herfan Heryandi dan Pascal Alfadian.</p>
 					<p>Daftar kontributor lengkap dapat dilihat di <a href="https://github.com/ftisunpar/IFStudentPortal/graphs/contributors" target="_blank">sini</a>.</p>
 					<p>Kode sumber dapat dilihat di <a href="https://github.com/ftisunpar/IFStudentPortal" target="_blank">sini</a>.</p>
+					<h2>Ketentuan Penggunaan</h2>
+					<p>Layanan ini diberikan secara gratis, tanpa garansi apapun. Pengembang dan pengelola situs tidak bertanggung jawab atas segala kerugian yang mungkin ditimbulkan.
+					Khusus kepada mahasiswa, silahkan memeriksa kembali peraturan resmi dari jurusan / universitas untuk memastikan.</p>
+					<h2>Kebijakan Privasi</h2>
+					<p>Pengembang dan pengelola melakukan upaya terbaik untuk menjaga privasi Anda.<p>
+					<p>Layanan ini meminta password Anda untuk melakukan login ke situs Portal Akademik Mahasiswa. Program tidak menyimpan password tersebut setelah login dilakukan.</p>
+					<p>Data mahasiswa diunduh dari situs Portal Akademik Mahasiswa, dan mungkin disimpan oleh server di memori dalam jangka waktu tertentu. Server tidak memberikan akses kepada pihak
+					manapun (termasuk pengembang) atas data tersebut.</p>
 				</div>
 			</div>
 		</div>
