--- a/app/StudentPortal/app/views/templates/sidebar.scala.html
+++ b/app/StudentPortal/app/views/templates/sidebar.scala.html
@@ -27,7 +27,7 @@
 					Data Akademik<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
 				</a></li>
 				<li><a href="@routes.Application.tentang()">
-					Lapor Bug, dll<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-info-sign"></span>
+					Info &amp; Lapor Bug<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-info-sign"></span>
 				</a></li>
 				<li ><a href="@routes.Application.logout()">
 					Logout<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span>
