More links to source code, sidebar menu shows current page.

--- a/app/StudentPortal/app/views/home.scala.html
+++ b/app/StudentPortal/app/views/home.scala.html
@@ -7,7 +7,7 @@
     	@templates.head("Home")
     </head>
     <body>
-		@templates.sidebar()
+		@templates.sidebar("home")
 		<div class="main">
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
