--- a/app/StudentPortal/app/views/jadwalKuliah.scala.html
+++ b/app/StudentPortal/app/views/jadwalKuliah.scala.html
@@ -6,7 +6,7 @@
     	@templates.head("Jadwal Kuliah")
     </head>
     <body>
-		@templates.sidebar()
+		@templates.sidebar("jadwalKuliah")
 		<div class="main">
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
