--- a/app/StudentPortal/app/views/tentang.scala.html
+++ b/app/StudentPortal/app/views/tentang.scala.html
@@ -5,7 +5,7 @@
     	@templates.head("Lapor Bug / Tentang Portal")
     </head>
     <body>
-		@templates.sidebar()
+		@templates.sidebar("tentang")
 		<div class="main">
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
