--- a/app/StudentPortal/app/views/ringkasan.scala.html
+++ b/app/StudentPortal/app/views/ringkasan.scala.html
@@ -7,7 +7,7 @@
     	@templates.head("Data Mata Kuliah")
     </head>
     <body>
-		@templates.sidebar()
+		@templates.sidebar("ringkasan")
 		<div class="main">
 		<!-- Konten Halaman -->
 			<div class="container-fluid">
@@ -27,8 +27,8 @@
 							<h5 class="text-center">INDEKS PRESTASI</h5>
 						</div>
 						<div class="ringkasan-body">
-							IPS @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
-							IPK: @ringkasan.getIPK()<br>
+							IPS <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L116"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a> @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
+							IPK <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L74"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>: @ringkasan.getIPK()<br>
 							SKS lulus: @ringkasan.getSKSLulusTotal()<br>
 							Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
 						</div>
