--- a/app/StudentPortal/app/views/templates/sidebar.scala.html
+++ b/app/StudentPortal/app/views/templates/sidebar.scala.html
@@ -1,3 +1,4 @@
+@(selected: String)
 <nav class="navbar navbar-inverse sidebar" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
@@ -14,22 +15,22 @@
 		</div>
 		<div class="collapse navbar-collapse" id="sidebar-navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active" ><a href="@routes.Application.home()">
+				<li @if(selected.equals("home")){class="active"}><a href="@routes.Application.home()">
 					Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span>
 				</a></li>
-				<li><a href="@routes.Application.prasyarat()">
+				<li @if(selected.equals("prasyarat")){class="active"}><a href="@routes.Application.prasyarat()">
 					Prasyarat Mata Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tasks"></span>
 				</a></li>
-				<li><a href="@routes.Application.jadwalKuliah()">
+				<li @if(selected.equals("jadwalKuliah")){class="active"}><a href="@routes.Application.jadwalKuliah()">
 					 Jadwal Kuliah<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-calendar"></span>
 				</a></li>
-				<li><a href="@routes.Application.ringkasan()">
+				<li @if(selected.equals("ringkasan")){class="active"}><a href="@routes.Application.ringkasan()">
 					Data Akademik<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-book"></span>
 				</a></li>
-				<li><a href="@routes.Application.tentang()">
+				<li @if(selected.equals("tentang")){class="active"}><a href="@routes.Application.tentang()">
 					Info &amp; Lapor Bug<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-info-sign"></span>
 				</a></li>
-				<li ><a href="@routes.Application.logout()">
+				<li><a href="@routes.Application.logout()">
 					Logout<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span>
 				</a></li>
 			</ul>
