--- a/StudentPortal/app/views/ringkasan.scala.html
+++ b/StudentPortal/app/views/ringkasan.scala.html
@@ -27,8 +27,8 @@
 							<h5 class="text-center">INDEKS PRESTASI</h5>
 						</div>
 						<div class="ringkasan-body">
-							IPS <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L116"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a> @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
-							IPK <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L74"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>: @ringkasan.getIPK()<br>
+							IPS <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L131"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a> @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
+							IPK (Lulus) <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L88"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>: @ringkasan.getIPK()<br>
 							SKS lulus: @ringkasan.getSKSLulusTotal()<br>
 							Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
 						</div>
