--- a/StudentPortal/app/views/ringkasan.scala.html
+++ b/StudentPortal/app/views/ringkasan.scala.html
@@ -30,10 +30,30 @@
 							IPS <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L131"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a> @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
 							IPK (Lulus) <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L88"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>: @ringkasan.getIPK()<br>
 							SKS lulus: @ringkasan.getSKSLulusTotal()<br>
-							Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
+							<!--Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>--> <!-- dihapus karena akan dijadikan satu tabel baru -->
 						</div>
 					</div>
                 </div>
+				<p></br></p>
+				
+				<!--  YANG KITA TAMBAH------------------------------------------------------------------------------------- -->
+				<div class="row">
+					<div class="col-lg-2 ringkasan-panel"></div>
+                    <div class="col-lg-8 ringkasan-panel">
+                    	<div class="page-header">
+							<h5 class="text-center">SYARAT KELULUSAN</h5>
+						</div>
+						<div class="ringkasan-body">
+						Masih kurang 3 SKS<BR>
+						Belum lulus kuliah wajib AIF102<BR>
+						Belum lulus kuliah wajib AIF201<BR>
+						Belum mencukupi 4 kuliah pilihan wajib (sudah lulus 2: AIF311 dan AIF312)<BR>
+						Belum mengambil salah satu dari AIF306 atau AIF304+AIF305<BR>
+						</div>
+				</div>
+				<!-- ------------------------------------------------------------------------------------- -->
+				
+				<!--  TABEL INI DIHAPUS
 				<p></br></p>
 				<div class="row">
 					<div class="col-lg-2 ringkasan-panel"></div>
@@ -72,6 +92,7 @@
 							</div>
 					</div>
                 </div>
+                -->
                 }
 			</div>
 		</div>
