--- a/StudentPortal/app/views/ringkasan.scala.html
+++ b/StudentPortal/app/views/ringkasan.scala.html
@@ -1,5 +1,4 @@
-@(ringkasan: models.display.RingkasanDisplay)
-
+@(ringkasan: models.display.RingkasanDisplay , kelulusan : id.ac.siamodels.prodi.teknikinformatika.Kelulusan)
 <!DOCTYPE html>
 
 <html lang="en">
@@ -15,7 +14,7 @@
 					<h2 class="text-center">RINGKASAN DATA AKADEMIK</h2> 
 				</div>
 				<p></br></p>
-				@if(ringkasan==null){
+				@if(ringkasan==null){ 
 					<div class="row">
 						<h5 style="color: gray;">DATA AKADEMIK BELUM TERSEDIA <span class="glyphicon glyphicon-exclamation-sign"></span></h5>
 					</div>	
@@ -44,16 +43,13 @@
 							<h5 class="text-center">SYARAT KELULUSAN</h5>
 						</div>
 						<div class="ringkasan-body">
-						Masih kurang 3 SKS<BR>
-						Belum lulus kuliah wajib AIF102<BR>
-						Belum lulus kuliah wajib AIF201<BR>
-						Belum mencukupi 4 kuliah pilihan wajib (sudah lulus 2: AIF311 dan AIF312)<BR>
-						Belum mengambil salah satu dari AIF306 atau AIF304+AIF305<BR>
+							@for(list<-kelulusan.getData()){
+								<li>@list</li>
+							}
 						</div>
 				</div>
 				<!-- ------------------------------------------------------------------------------------- -->
-				
-				<!--  TABEL INI DIHAPUS
+				<!--  TABEL YANG DIHAPUS
 				<p></br></p>
 				<div class="row">
 					<div class="col-lg-2 ringkasan-panel"></div>
