--- a/StudentPortal/app/views/ringkasan.scala.html
+++ b/StudentPortal/app/views/ringkasan.scala.html
@@ -1,5 +1,4 @@
-@(ringkasan: models.display.RingkasanDisplay)
-
+@(ringkasan: models.display.RingkasanDisplay )
 <!DOCTYPE html>
 
 <html lang="en">
@@ -15,7 +14,7 @@
 					<h2 class="text-center">RINGKASAN DATA AKADEMIK</h2> 
 				</div>
 				<p></br></p>
-				@if(ringkasan==null){
+				@if(ringkasan==null){ 
 					<div class="row">
 						<h5 style="color: gray;">DATA AKADEMIK BELUM TERSEDIA <span class="glyphicon glyphicon-exclamation-sign"></span></h5>
 					</div>	
@@ -30,15 +29,27 @@
 							IPS <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L131"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a> @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
 							IPK (Lulus) <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L88"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>: @ringkasan.getIPK()<br>
 							SKS lulus: @ringkasan.getSKSLulusTotal()<br>
-							Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>
-							@if(ringkasan.getNilaiTOEFL() !=0){
-								Nilai TOEFL Terakhir: @ringkasan.getNilaiTOEFL()<br>
-							}else{
-								Nilai TOEFL Terakhir: Tidak ada<br>
-							}
+							<!--Sisa SKS untuk kelulusan: @ringkasan.getMinSisaSKS()<br>--> <!-- dihapus karena akan dijadikan satu tabel baru -->
 						</div>
 					</div>
                 </div>
+				<p></br></p>
+				
+				<!--  YANG KITA TAMBAH------------------------------------------------------------------------------------- -->
+				<div class="row">
+					<div class="col-lg-2 ringkasan-panel"></div>
+                    <div class="col-lg-8 ringkasan-panel">
+                    	<div class="page-header">
+							<h5 class="text-center">SYARAT KELULUSAN</h5>
+						</div>
+						<div class="ringkasan-body">
+							@for(list<-ringkasan.getData()){
+								<li>@list</li>
+							}
+						</div>
+				</div>
+				<!-- ------------------------------------------------------------------------------------- -->
+				<!--  TABEL YANG DIHAPUS
 				<p></br></p>
 				<div class="row">
 					<div class="col-lg-2 ringkasan-panel"></div>
@@ -77,6 +88,7 @@
 							</div>
 					</div>
                 </div>
+                -->
                 }
 			</div>
 		</div>
