Menambahkan media medium pada main css yang awalnya hanya ada dua (small&medium display dan full display)

--- a/StudentPortal/app/views/templates/sidebar.scala.html
+++ b/StudentPortal/app/views/templates/sidebar.scala.html
@@ -1,5 +1,5 @@
 @(selected: String)
-<nav class="navbar navbar-inverse sidebar" role="navigation">
+<nav class="navbar-inverse sidebar" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#sidebar-navbar-collapse">
