Add certificate link download at login page

--- a/StudentPortal/app/views/login.scala.html
+++ b/StudentPortal/app/views/login.scala.html
@@ -10,6 +10,7 @@
 	    <div class="container" id="login-container">
 			<div class="row">
 				<div class="col-md-4 col-sm-2"></div>
+				<a href="@routes.Assets.versioned("certs/localhostca.crt")" style="color: white"> Klik di sini untuk menginstal sertifikat</a>
 				<div class="col-md-4 col-sm-8">
 					<div class="panel panel-default">
 						<div class="panel-body">
