--- a/StudentPortal/app/views/ringkasan.scala.html
+++ b/StudentPortal/app/views/ringkasan.scala.html
@@ -29,6 +29,11 @@
 								IPS <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L131"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a> @ringkasan.getSemesterTerakhir: @ringkasan.getIPS() dari @ringkasan.getSKSLulusSemTerakhir SKS<br>
 								IPK (Lulus) <a target="_blank" href="https://github.com/pascalalfadian/SIAModels/blob/master/src/main/java/id/ac/unpar/siamodels/Mahasiswa.java#L88"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>: @ringkasan.getIPK()<br>
 								SKS lulus: @ringkasan.getSKSLulusTotal()<br>
+								@if(ringkasan.getNilaiTOEFL() !=0){
+									Nilai TOEFL Terakhir: @ringkasan.getNilaiTOEFL()<br>
+								}else{
+									Nilai TOEFL Terakhir: Tidak ada<br>
+								}
 							</div>
 						</div>
 	                </div>
